# rhodibot

./: AI.a2ml  AI.djot  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.scm  Justfile  META.scm  README.adoc  ROADMAP.adoc  STATE.scm
.clusterfuzzlite/: Dockerfile  build.sh
.github/workflows/: codeql.yml  quality.yml  scorecard.yml  secret-scanner.yml  workflow-linter.yml
.machine_readable/: PLAYBOOK.scm  STATE.scm
.machine_readable/6scm/: ECOSYSTEM.scm  NEUROSYM.scm  STATE.scm
.machines_readable/6scm/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm
fuzz/: Cargo.toml
src/: config.rs  github.rs  main.rs  rsr.rs  webhook.rs
